<resources>
    <string name="app_name">FunPhoto</string>
    <string name="btn_español">Español</string>
    <string name="btn_ingles">Ingles</string>
    <string name="btn_euskera">Euskera</string>
    <string name="btn_login">Iniciar sesion</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_camara">Camara</string>
    <string name="btn_galeria">Galeria</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_subir_foto">Subir Foto</string>
    <string name="btn_usuario">Usuario</string>
    <string name="btn_Contraseña">Contraseña</string>
    <string name="btn_cerrarsesion">Cerrar Sesión</string>
    <string name="btn_editar">Editar</string>
    <string name="titulo_gallery">Últimas publicaciones</string>
    <string name="titulo_registrarse">Registrarse</string>
    <string name="btn_nombrecompleto">Nombre Completo</string>
    <string name="btn_email">Email</string>
    <string name="btn_hacerfotoperfil">Hacer foto de perfil</string>
    <string name="btn_nuevapublicacion">Nueva publicación</string>
    <string name="btn_eliminar_cuenta">Eliminar cuenta</string>
</resources>